# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.59"                                      # error handling
bytes = "1.7.1"                                        # helps manage buffers
thiserror = "1.0.63"                                   # error handling
tokio = { version = "1.40.0", features = ["full"] }    # async networking
femme = { version = "2.2.1" }
log = { version = "0.4.20" }
num = "0.4"
faster-hex = "0.9.0"
byteorder = "1.5.0"
rand = "0.8.5"
serde_json = "1.0.128"
